--- a/.github/workflows/build.ghrunner.image.yml
+++ b/.github/workflows/build.ghrunner.image.yml
@@ -23,6 +23,6 @@ jobs:
     - name: build and publish Docker Image
       run: |
         cd ${{ github.workspace }}/github-runner/
-        docker build -t ggracr.azurecr.io/github-runner:v1
+        docker build -t ggracr.azurecr.io/github-runner:v1 .
         docker push ggracr.azurecr.io/github-runner:v1 
 
