--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,5 +28,5 @@ jobs:
 
     - name: deploy container apps
       run: |
-        az deployment group create -g aca-ghr-test -f ./azure-container-apps/main.bicep -p pat=${{secrets.PAT}} registry_password=${{REG_PASSWORD}}
+        az deployment group create -g aca-ghr-test -f ./azure-container-apps/main.bicep -p pat=${{secrets.PAT}} registry_password=${{secrets.REG_PASSWORD}}
 
