--- a/github-runner/dockerfile
+++ b/github-runner/dockerfile
@@ -7,8 +7,12 @@ RUN apt-get update -y && apt-get upgrade -y && useradd -m docker
 RUN apt-get install -y --no-install-recommends \
     curl nodejs wget unzip vim git azure-cli jq build-essential libssl-dev libffi-dev python3 python3-venv python3-dev python3-pip
 
+COPY config-tool.sh /home/docker/
+RUN chmod +x /home/docker/config-tool.sh
+RUN /home/docker/config-tool.sh
+
 RUN cd /home/docker && mkdir actions-runner && cd actions-runner \
-    && curl -O -L https://github.com/actions/runner/releases/download/v2.309.0/actions-runner-linux-x64-2.309.0.tar.gz \
+    && curl -O -L https://github.com/actions/runner/releases/download/v2.309.0/actions-runner-linux-x64-2.309.0.tar.gz/releases/download/v2.309.0/actions-runner-linux-x64-2.309.0.tar.gz \
     && tar xzf ./actions-runner-linux-x64-2.309.0.tar.gz
 
 RUN chown -R docker ~docker && /home/docker/actions-runner/bin/installdependencies.sh
