--- a/github-runner/dockerfile
+++ b/github-runner/dockerfile
@@ -12,7 +12,7 @@ RUN chmod +x /home/docker/config-tool.sh
 RUN /home/docker/config-tool.sh
 
 RUN cd /home/docker && mkdir actions-runner && cd actions-runner \
-    && curl -O -L https://github.com/actions/runner/releases/download/v2.309.0/actions-runner-linux-x64-2.309.0.tar.gz/releases/download/v2.309.0/actions-runner-linux-x64-2.309.0.tar.gz \
+    && curl -O -L https://github.com/actions/runner/releases/download/v2.309.0/actions-runner-linux-x64-2.309.0.tar.gz \
     && tar xzf ./actions-runner-linux-x64-2.309.0.tar.gz
 
 RUN chown -R docker ~docker && /home/docker/actions-runner/bin/installdependencies.sh
