--- a/github-runner/dockerfile
+++ b/github-runner/dockerfile
@@ -5,7 +5,21 @@ ENV DEBIAN_FRONTEND=noninteractive
 
 RUN apt-get update -y && apt-get upgrade -y && useradd -m docker
 RUN apt-get install -y --no-install-recommends \
-    curl nodejs wget unzip vim git azure-cli jq build-essential libssl-dev libffi-dev python3 python3-venv python3-dev python3-pip
+    curl \
+    nodejs \ 
+    wget \
+    unzip \
+    vim \
+    git \
+    azure-cli \
+    jq \
+    build-essential \
+    libssl-dev \
+    libffi-dev \
+    python3 \
+    python3-venv \
+    python3-dev \
+    python3-pip 
 
 COPY config-tool.sh /home/docker/
 RUN chmod +x /home/docker/config-tool.sh
