--- a/github-runner/dockerfile
+++ b/github-runner/dockerfile
@@ -19,7 +19,8 @@ RUN apt-get install -y --no-install-recommends \
     python3 \
     python3-venv \
     python3-dev \
-    python3-pip 
+    python3-pip \
+    sudo
 
 COPY config-tool.sh /home/docker/
 RUN chmod +x /home/docker/config-tool.sh
