--- a/.github/workflows/deploy.sample.app.yml
+++ b/.github/workflows/deploy.sample.app.yml
@@ -24,7 +24,7 @@ jobs:
       run: |
         curl -Lo bicep https://github.com/Azure/bicep/releases/latest/download/bicep-linux-x64
         chmod +x ./bicep
-        sudo mv ./bicep /usr/local/bin/bicep
+        mv ./bicep /usr/local/bin/bicep
 
     - name: deploy container apps
       run: |
