--- a/github-runner/dockerfile
+++ b/github-runner/dockerfile
@@ -3,7 +3,7 @@ FROM ubuntu:20.04
 #ARG RUNNER_VERSION
 ENV DEBIAN_FRONTEND=noninteractive
 
-RUN apt-get update -y && apt-get upgrade -y && useradd -m docker
+RUN apt-get update -y && apt-get upgrade -y
 RUN apt-get install -y --no-install-recommends \
     curl \
     nodejs \ 
@@ -21,23 +21,26 @@ RUN apt-get install -y --no-install-recommends \
     python3-dev \
     python3-pip \
     sudo
+    
+RUN useradd -m runner
 
-COPY config-tool.sh /home/docker/
-RUN chmod +x /home/docker/config-tool.sh
-RUN /home/docker/config-tool.sh
+COPY config-tool.sh /home/runner/
+RUN chmod +x /home/runner/config-tool.sh
+RUN /home/runner/config-tool.sh
 
-RUN usermod -aG sudo docker
+RUN usermod -aG sudo runner
+RUN usermod -aG docker runner
 
 RUN echo '%sudo ALL=(ALL) NOPASSWD: ALL' >> /etc/sudoers
 
-RUN cd /home/docker && mkdir actions-runner && cd actions-runner \
+RUN cd /home/runner && mkdir actions-runner && cd actions-runner \
     && curl -O -L https://github.com/actions/runner/releases/download/v2.309.0/actions-runner-linux-x64-2.309.0.tar.gz \
     && tar xzf ./actions-runner-linux-x64-2.309.0.tar.gz
 
-RUN chown -R docker ~docker && /home/docker/actions-runner/bin/installdependencies.sh
+RUN chown -R runner ~runner && /home/runner/actions-runner/bin/installdependencies.sh
 
 ADD spin.sh spin.sh
 RUN chmod +x spin.sh
-# set the user to "docker" so all subsequent commands are run as the docker user
-USER docker
+# set the user to "runner" so all subsequent commands are run as the runner user
+USER runner
 ENTRYPOINT ["./spin.sh"]
