--- a/.github/workflows/deploy.sample.app.yml
+++ b/.github/workflows/deploy.sample.app.yml
@@ -20,7 +20,7 @@ jobs:
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-    - name: deploy container apps
+    - name: Deploy Sample App
       run: |
         az deployment group create -g aca-ghr-test -f ./sample-web-app/main.bicep
 
