--- a/github-runner/dockerfile
+++ b/github-runner/dockerfile
@@ -11,7 +11,6 @@ RUN apt-get install -y --no-install-recommends \
     unzip \
     vim \
     git \
-    azure-cli \
     jq \
     build-essential \
     libssl-dev \
@@ -21,6 +20,8 @@ RUN apt-get install -y --no-install-recommends \
     python3-dev \
     python3-pip \
     sudo
+
+RUN curl -sL https://aka.ms/InstallAzureCLIDeb | bash
 
 RUN curl -Lo bicep https://github.com/Azure/bicep/releases/latest/download/bicep-linux-x64 \
     && chmod +x ./bicep \
