--- a/github-runner/dockerfile
+++ b/github-runner/dockerfile
@@ -21,21 +21,24 @@ RUN apt-get install -y --no-install-recommends \
     python3-pip \
     sudo
 
+# Install Azure CLI
 RUN curl -sL https://aka.ms/InstallAzureCLIDeb | bash
 
+# Install Bicep
 RUN curl -Lo bicep https://github.com/Azure/bicep/releases/latest/download/bicep-linux-x64 \
     && chmod +x ./bicep \
     && mv ./bicep /usr/local/bin/bicep
-    
+
+# Create a user runner, add it to sudo group and 
 RUN useradd -m runner
+RUN usermod -aG sudo runner
+
+# Enable all members of sudo group to run commands with superuser privileges without needing password
+RUN echo '%sudo ALL=(ALL) NOPASSWD: ALL' >> /etc/sudoers
 
 COPY config-tool.sh /home/runner/
 RUN chmod +x /home/runner/config-tool.sh
 RUN /home/runner/config-tool.sh
-
-RUN usermod -aG sudo runner
-
-RUN echo '%sudo ALL=(ALL) NOPASSWD: ALL' >> /etc/sudoers
 
 RUN cd /home/runner && mkdir actions-runner && cd actions-runner \
     && curl -O -L https://github.com/actions/runner/releases/download/v2.309.0/actions-runner-linux-x64-2.309.0.tar.gz \
