fixed policy scan action

--- a/actions/azure-policy-scan/action.yml
+++ b/actions/azure-policy-scan/action.yml
@@ -1,5 +1,6 @@
 name: 'Azure Policy Scan'
 description: 'Reusable Azure Policy Scan Workflow'
+
 inputs:
   scopes:
     description: 'Full identifier of one or more azure reources, resource groups and subscription to be scanned for compliance'
@@ -12,24 +13,18 @@ inputs:
     required: false
   report-name:
     description: 'The filename for the CSV containing a list of resources that are non-compliant after triggered scan is completed'
-outputs:
-  random-number:
-    description: "Random number"
-    value: ${{ steps.random-number-generator.outputs.random-number }}
+    required: false
+
 runs:
   using: "composite"
   steps:
-    # Azure Login       
-    - name: Login to Azure
-      uses: azure/login@v1
-      with:
-        creds: ${{secrets.AZURE_CREDENTIALS}} 
-    
     - name: Check for resource compliance
       uses: azure/policy-compliance-scan@v0
       with:
         scopes: |
           ${{ inputs.scopes}}
+        report-name: ${{ inputs.report-name }}
+        
 
 
 
