fixed bicep scan WF

--- a/.github/workflows/bicep.az.policy.scan.yml
+++ b/.github/workflows/bicep.az.policy.scan.yml
@@ -3,7 +3,7 @@ on:
   workflow_dispatch
 
 jobs:
-  Scan Bicep against Azure Policy:
+  bicep-scan:
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v4
