--- a/.github/workflows/bicep.az.policy.scan.yml
+++ b/.github/workflows/bicep.az.policy.scan.yml
@@ -11,9 +11,9 @@ jobs:
       - name: Run Policy Scan
         shell: pwsh
         run: |
-          Install-Module Az -Scope CurrentUser
-          Install-Module PSRule.Rules.Azure -Scope CurrentUser -AllowPrerelease
-          Install-Module EnterprisePolicyAsCode -Scope CurrentUser
+          Install-Module -Name Az -Scope CurrentUser - Force -AllowClobber
+          Install-Module -Name PSRule.Rules.Azure -Scope CurrentUser -AllowPrerelease - Force -AllowClobber
+          Install-Module -Name EnterprisePolicyAsCode -Scope CurrentUser - Force -AllowClobber
 
           cd ${{github.workspace}}\PSRule
       
