--- a/.github/workflows/bicep.az.policy.scan.yml
+++ b/.github/workflows/bicep.az.policy.scan.yml
@@ -19,6 +19,7 @@ jobs:
       - name: Run Policy Scan
         shell: pwsh
         run: |
+          Install-Module -Name Az -Force -AllowClobber -Scope CurrentUser
           Install-Module -Name PSRule.Rules.Azure -Scope CurrentUser -AllowPrerelease -Force -AllowClobber
           Install-Module -Name EnterprisePolicyAsCode -Scope CurrentUser -Force -AllowClobber
 
