--- a/.github/workflows/bicep.az.policy.scan.yml
+++ b/.github/workflows/bicep.az.policy.scan.yml
@@ -57,5 +57,5 @@ jobs:
             Connect-AzAccount -ServicePrincipal -TenantId $TenantId -Credential $Credential
             Export-AzPolicyResources -DefinitionsRootFolder ./ -Mode psrule -OutputFolder ./
             Export-AzPolicyAssignmentRuleData -AssignmentFile ./psrule.assignment.json -OutputPath ./.ps-rule/policy-rules.Rule.jsonc -ErrorAction SilentlyContinue
-            Assert-PSRule -InputPath ./ -Module "PSRule.Rules.Azure" -Format File -OutputFormat Csv -OutputPath exceptions.csv -ErrorAction SilentlyContinue
+            Assert-PSRule -InputPath ./az-policy-scan/ -Module "PSRule.Rules.Azure" -Format File -OutputFormat Csv -OutputPath exceptions.csv -ErrorAction SilentlyContinue
           azPSVersion: "latest"
