fixed bicep scan WF15

--- a/.github/workflows/bicep.az.policy.scan.yml
+++ b/.github/workflows/bicep.az.policy.scan.yml
@@ -63,4 +63,5 @@ jobs:
       - name: print json file
         shell: bash
         run: |
+          jq . ./psrule.assignment.json
           jq . ./ps-rule/policy-rules.Rule.jsonc
