--- a/.github/workflows/bicep.az.policy.scan.yml
+++ b/.github/workflows/bicep.az.policy.scan.yml
@@ -65,4 +65,4 @@ jobs:
         run: |
           jq . ./psrule.assignment.json
           echo "Printing policy-rules.Rule.jsonc"
-          jq . ./.ps-rule/policy-rules.Rule.jsonc
+          cat ./.ps-rule/policy-rules.Rule.jsonc
