--- a/github-runner/dockerfile
+++ b/github-runner/dockerfile
@@ -1,53 +1,56 @@
-FROM ubuntu:20.04
+# Source: https://github.com/dotnet/dotnet-docker
+FROM mcr.microsoft.com/dotnet/runtime-deps:6.0-jammy as build
 
-#ARG RUNNER_VERSION
+ARG TARGETOS=linux
+ARG TARGETARCH=x64
+ARG RUNNER_VERSION=2.309.0
+ARG RUNNER_CONTAINER_HOOKS_VERSION=0.4.0
+ARG DOCKER_VERSION=24.0.6
+
+RUN apt update -y && apt install curl unzip -y
+
+WORKDIR /actions-runner
+RUN export RUNNER_ARCH=${TARGETARCH} \
+    && if [ "$RUNNER_ARCH" = "amd64" ]; then export RUNNER_ARCH=x64 ; fi \
+    && curl -f -L -o runner.tar.gz https://github.com/actions/runner/releases/download/v${RUNNER_VERSION}/actions-runner-${TARGETOS}-${RUNNER_ARCH}-${RUNNER_VERSION}.tar.gz \
+    && tar xzf ./runner.tar.gz \
+    && rm runner.tar.gz
+
+RUN curl -f -L -o runner-container-hooks.zip https://github.com/actions/runner-container-hooks/releases/download/v${RUNNER_CONTAINER_HOOKS_VERSION}/actions-runner-hooks-k8s-${RUNNER_CONTAINER_HOOKS_VERSION}.zip \
+    && unzip ./runner-container-hooks.zip -d ./k8s \
+    && rm runner-container-hooks.zip
+
+RUN export RUNNER_ARCH=${TARGETARCH} \
+    && if [ "$RUNNER_ARCH" = "amd64" ]; then export DOCKER_ARCH=x86_64 ; fi \
+    && if [ "$RUNNER_ARCH" = "arm64" ]; then export DOCKER_ARCH=aarch64 ; fi \
+    && curl -fLo docker.tgz https://download.docker.com/${TARGETOS}/static/stable/${DOCKER_ARCH}/docker-${DOCKER_VERSION}.tgz \
+    && tar zxvf docker.tgz \
+    && rm -rf docker.tgz
+
+FROM mcr.microsoft.com/dotnet/runtime-deps:6.0-jammy
+
 ENV DEBIAN_FRONTEND=noninteractive
+ENV RUNNER_MANUALLY_TRAP_SIG=1
+ENV ACTIONS_RUNNER_PRINT_LOG_TO_STDOUT=1
 
-RUN apt-get update -y && apt-get upgrade -y
-RUN apt-get install -y --no-install-recommends \
-    curl \
-    nodejs \ 
-    wget \
-    unzip \
-    vim \
-    git \
-    jq \
-    build-essential \
-    libssl-dev \
-    libffi-dev \
-    python3 \
-    python3-venv \
-    python3-dev \
-    python3-pip \
-    sudo
+RUN apt-get update -y \
+    && apt-get install -y --no-install-recommends \
+    sudo \
+    lsb-release \
+    && rm -rf /var/lib/apt/lists/*
 
-# Install Azure CLI
-RUN curl -sL https://aka.ms/InstallAzureCLIDeb | bash
+RUN adduser --disabled-password --gecos "" --uid 1001 runner \
+    && groupadd docker --gid 123 \
+    && usermod -aG sudo runner \
+    && usermod -aG docker runner \
+    && echo "%sudo   ALL=(ALL:ALL) NOPASSWD:ALL" > /etc/sudoers \
+    && echo "Defaults env_keep += \"DEBIAN_FRONTEND\"" >> /etc/sudoers
 
-# Install Bicep
-RUN curl -Lo bicep https://github.com/Azure/bicep/releases/latest/download/bicep-linux-x64 \
-    && chmod +x ./bicep \
-    && mv ./bicep /usr/local/bin/bicep
+WORKDIR /home/runner
 
-# Create a user runner, add it to sudo group and 
-RUN useradd -m runner
-RUN usermod -aG sudo runner
+COPY --chown=runner:docker --from=build /actions-runner .
 
-# Enable all members of sudo group to run commands with superuser privileges without needing password
-RUN echo '%sudo ALL=(ALL) NOPASSWD: ALL' >> /etc/sudoers
+RUN install -o root -g root -m 755 docker/* /usr/bin/ && rm -rf docker
 
-COPY config-tool.sh /home/runner/
-RUN chmod +x /home/runner/config-tool.sh
-RUN /home/runner/config-tool.sh
-
-RUN cd /home/runner && mkdir actions-runner && cd actions-runner \
-    && curl -O -L https://github.com/actions/runner/releases/download/v2.309.0/actions-runner-linux-x64-2.309.0.tar.gz \
-    && tar xzf ./actions-runner-linux-x64-2.309.0.tar.gz
-
-RUN chown -R runner ~runner && /home/runner/actions-runner/bin/installdependencies.sh
-
-ADD spin.sh spin.sh
-RUN chmod +x spin.sh
-# set the user to "runner" so all subsequent commands are run as the runner user
 USER runner
 ENTRYPOINT ["./spin.sh"]
