updated docker file 2

--- a/github-runner/dockerfile
+++ b/github-runner/dockerfile
@@ -42,7 +42,7 @@ RUN export RUNNER_ARCH=${TARGETARCH} \
 # # Install Docker Packages 
 # RUN apt-get install -y docker-ce docker-ce-cli docker-buildx-plugin containerd.io docker-compose-plugin --no-install-recommends --allow-unauthenticated
 
-# FROM mcr.microsoft.com/dotnet/runtime-deps:6.0-jammy
+FROM mcr.microsoft.com/dotnet/runtime-deps:6.0-jammy
 
 ENV DEBIAN_FRONTEND=noninteractive
 ENV RUNNER_MANUALLY_TRAP_SIG=1
