--- a/github-runner/dockerfile
+++ b/github-runner/dockerfile
@@ -28,20 +28,6 @@ RUN export RUNNER_ARCH=${TARGETARCH} \
     && tar zxvf docker.tgz \
     && rm -rf docker.tgz
 
-##### Install Docker Engine on Ubuntu #####
-
-# # Add Docker's official GPG Key:
-# RUN install -m 0755 -d /etc/apt/keyrings
-# RUN curl -fsSL https://download.docker.com/linux/ubuntu/gpg | gpg --dearmor -o /etc/apt/keyrings/docker.gpg
-# RUN chmod a+r /etc/apt/keyrings/docker.gpg
-
-# # Add the repository to Apt sources:
-# RUN echo "deb [arch="$(dpkg --print-architecture)" signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu "$(. /etc/os-release && echo "$VERSION_CODENAME")" stable" | tee /etc/apt/sources.list.d/docker.list > /dev/null
-# RUN apt-get update
-
-# # Install Docker Packages 
-# RUN apt-get install -y docker-ce docker-ce-cli docker-buildx-plugin containerd.io docker-compose-plugin --no-install-recommends --allow-unauthenticated
-
 FROM mcr.microsoft.com/dotnet/runtime-deps:6.0-jammy
 
 ENV DEBIAN_FRONTEND=noninteractive
@@ -52,6 +38,8 @@ RUN apt-get update -y \
     && apt-get install -y --no-install-recommends \
     sudo \
     lsb-release \
+    jq \
+    curl \
     && rm -rf /var/lib/apt/lists/*
 
 RUN adduser --disabled-password --gecos "" --uid 1001 runner \
