--- a/github-runner/dockerfile
+++ b/github-runner/dockerfile
@@ -55,5 +55,8 @@ COPY --chown=runner:docker --from=build /actions-runner .
 
 RUN install -o root -g root -m 755 docker/* /usr/bin/ && rm -rf docker
 
+ADD spin.sh spin.sh
+RUN chmod +x spin.sh
+
 USER runner
 ENTRYPOINT ["./spin.sh"]
