--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ jobs:
         run: |
           curl -Lo bicep https://github.com/Azure/bicep/releases/latest/download/bicep-linux-x64
           chmod +x ./bicep
-          sudo mv ./bicep /usr/local/bin/bicep
+          mv ./bicep /usr/local/bin/bicep
 
       - name: Display az CLI version
         run: |
