--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -2,6 +2,12 @@ name: deploy function
 
 on:
   workflow_dispatch:
+  push:
+    branches:
+      - main
+    paths:
+      - 'ghr-func-app/**'
+      - '.github/workflows/app.yml'
 
 jobs:
 
